--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -190,7 +190,7 @@
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_1.compare_at_price | money}}</p>
                                 <p class="product__price">{{variant_1.price | money}}</p>
-                                <button class="button product__button-buy js-buy button--blue" type="button" data-product-id="1" onclick="addToCart({{variant_1.id}})"><span class="button__caption">Buy</span></button>
+                                <button class="button product__button-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--2 order__item">
@@ -1385,36 +1385,35 @@
 </div>
 {% include 'img-sprite.svg' %}
 <script>
+  $('.product__button-buy').on('click',function(e){    
+    e.preventDefault();
+    let formData = {
+     'items': [{
+       'id': e.target.dataset.variantId,
+      'quantity': 1
+      }]
+    };
+    fetch('/cart/add.js', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(formData)
+    })
+    .then(response => {
+      $(".success-feedback").fadeIn("fast").delay(4e3).fadeOut("slow");
+         $.ajax({
+            type: 'GET',
+            url: '/cart.json',
+            dataType: "json",
+           success: function (data) { $("#CartCost .money").text('$ '+data.total_price*0.01);}
+          });
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+    });
   
-    function addToCart(variat_id){    
-      e.preventDefault();
-      let formData = {
-       'items': [{
-         'id': variat_id,
-        'quantity': 1
-        }]
-      };
-      fetch('/cart/add.js', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(formData)
-      })
-      .then(response => {
-        //$(".success-feedback").fadeIn("fast").delay(4e3).fadeOut("slow");
-           $.ajax({
-              type: 'GET',
-              url: '/cart.json',
-              dataType: "json",
-             success: function (data) { $("#CartCost .money").text('$ '+data.total_price*0.01);}
-            });
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-      });
-    
-   }
+ });
   </script>
 {% schema %}
 {
