Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -224,7 +224,7 @@
                             <div class="product__order">
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_234.compare_at_price | money}}</p>
-                                <p class="product__price">{{variant_234.price | money}}</p><button class="button product__button-buy js-buy button--blue" type="button" data-product-id="2"><span class="button__caption">Buy</span></button>
+                                <p class="product__price">{{variant_234.price | money}}</p><button class="button product__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--3 order__item">
@@ -258,7 +258,7 @@
                             <div class="product__order">
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_set.compare_at_price | money}}</p>
-                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy js-buy" type="button" data-product-id="3"><span class="button__caption">Buy</span></button>
+                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy js-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                     </div>
@@ -961,7 +961,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_1.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-product-id="1"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -990,7 +990,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_234.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-product-id="2"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -1021,7 +1021,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_set.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy js-buy" type="button" data-product-id="3"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy js-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
