--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -190,7 +190,7 @@
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_1.compare_at_price | money}}</p>
                                 <p class="product__price">{{variant_1.price | money}}</p>
-                                <button class="button product__button-buy button--blue js-go-cart-add-to-cart" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
+                                <button class="button product__button-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--2 order__item">
