--- a/templates/page.quezzle.liquid
+++ b/templates/page.quezzle.liquid
@@ -1,3 +1,3 @@
 {% layout 'theme.quezzle' %}
 {% section 'page-quezzle' %}
-{%- section  'go-cart' -%}
+{%comment%}{%- section  'go-cart' -%}{%endcomment%}
