--- a/templates/page.quezzle.liquid
+++ b/templates/page.quezzle.liquid
@@ -1,3 +1,3 @@
 {% layout 'theme.quezzle' %}
 {% section 'page-quezzle' %}
-{%comment%}{%- section  'go-cart' -%}{%endcomment%}
+{%- section  'go-cart' -%}
