Quezzle custome page

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -880,7 +880,7 @@
      }
  </style>
     <script>
-        var goCart = new GoCart();
+        //var goCart = new GoCart();
         $('.upsell-anoncment-popup').magnificPopup({type:'inline',midClick: true});
         $('.upsell-anoncment-popup').click( function () {
             $('.announcement-slider').slick({infinite:!1,arrows:!0,dots:!1,slidesToShow:1,slidesToScroll:1,variableWidth:!1,swipeToSlide:!0,rows:0,autoplay:true,autoplaySpeed:2000,responsive:[{breakpoint:1199,settings:{slidesToShow:1,variableWidth:!1}}]}).slick("slickGoTo",0);
