--- a/templates/page.quezzle.liquid
+++ b/templates/page.quezzle.liquid
@@ -1,3 +1,3 @@
-{% layout 'theme.quezzle' %}
+{%- layout 'theme.quezzle' -%}
+{%- section 'page-quezzle' -%}
 {%- section  'go-cart' -%}
-{% section 'page-quezzle' %}
