Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -248,7 +248,8 @@
                             <div class="product__order">
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_234.compare_at_price | money}}</p>
-                                <p class="product__price">{{variant_234.price | money}}</p><button class="button product__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
+                                <p class="product__price">{{variant_234.price | money}}</p>
+                                <button class="button product__button-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--3 order__item">
@@ -985,7 +986,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_1.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -1014,7 +1015,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_234.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy js-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
