Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -283,7 +283,7 @@
                             <div class="product__order">
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_set.compare_at_price | money}}</p>
-                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy js-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
+                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                     </div>
@@ -1046,7 +1046,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_set.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy js-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
