Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -46,9 +46,9 @@
                     <li class="menu__item"><a class="menu__link" href="#team">Unidragon &amp; IC4Design</a></li>
                     <li class="menu__item"><a class="menu__link" href="#answers">FAQ</a></li>
                 </ul>
-            </nav><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
+            </nav><a class="btn-cart header__btn-cart" href="#popup-cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
                         <use xlink:href="#cart"></use>
-                    </svg></span><span class="btn-cart__total btn-cart__total-value" id="CartCost" data-discount="{{discount_calc}}">{{ cart_total_price | money }}</span>
+                    </svg></span><span class="btn-cart__total btn-cart__total-value" id="CartCost" data-discount="{{discount_calc}}">{{ cart_total_price | money }}</span></a>
                     <a class="button header__button-buy button--small" href="#order" role="button"><span class="button__caption">Buy</span></a>
             <a class="btn-menu js-popup header__btn-menu" href="#popup-menu" aria-label="Меню"><span class="btn-menu__icon"><svg class="svg-icon svg-icon--menu">
                         <use xlink:href="#menu"></use>
