--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -36,7 +36,7 @@
     endfor
   -%}
 <style>
-    .go-cart__trigger, .js-go-cart-trigger {
+    a .btn-cart .header__btn-cart .go-cart__trigger, .js-go-cart-trigger {
     display: inherit;
 }
 </style>
@@ -50,7 +50,7 @@
                     <li class="menu__item"><a class="menu__link" href="#team">Unidragon &amp; IC4Design</a></li>
                     <li class="menu__item"><a class="menu__link" href="#answers">FAQ</a></li>
                 </ul>
-            </nav><a class="btn-cart js-popup header__btn-cart go-cart__trigger js-go-cart-trigger" href="#popup-cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
+            </nav><a class="btn-cart header__btn-cart go-cart__trigger js-go-cart-trigger" href="#popup-cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
                         <use xlink:href="#cart"></use>
                     </svg></span><span class="btn-cart__total btn-cart__total-value" id="CartCost" data-discount="{{discount_calc}}">{{ cart_total_price | money }}</span></a>
                     <a class="button header__button-buy button--small" href="#order" role="button"><span class="button__caption">Buy</span></a>
