Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -36,7 +36,7 @@
     endfor
   -%}
 <style>
-    a .btn-cart .header__btn-cart .go-cart__trigger, .js-go-cart-trigger {
+    a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {
     display: inherit;
 }
 </style>
