Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -37,7 +37,7 @@
   -%}
 <style>
     a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {
-    display: inherit;
+    display: inherit!important;
 }
 </style>
 <div class="page__wrapper">
