Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -36,9 +36,8 @@
     endfor
   -%}
 <style>
-    a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {
-    display: inherit!important;
-}
+    a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {display: inherit!important;}
+    .go-cart-drawer-progress-bar {display: none;}
 </style>
 <div class="page__wrapper">
     <header class="header page__header">
