Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1389,20 +1389,20 @@
                 <ul class="menu-mob__items">
                     <li class="menu-mob__item"><a class="menu-mob__link js-popup-close" href="#about">
                             <picture>
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-1.webp' | asset_url }} 1x, {{'menu-mob/icon-1@2x.webp' | asset_url }} 2x" type="image/webp" />
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-1.png' | asset_url }} 1x, {{'menu-mob/icon-1@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob/icon-1.png' | asset_url }} 1x, {{'menu-mob/icon-1@2x.png' | asset_url }} 2x" width="42" height="26" alt="" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-1.webp' | asset_url }} 1x, {{'menu-mob-icon-1@2x.webp' | asset_url }} 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-1.png' | asset_url }} 1x, {{'menu-mob-icon-1@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob-icon-1.png' | asset_url }} 1x, {{'menu-mob-icon-1@2x.png' | asset_url }} 2x" width="42" height="26" alt="" />
                             </picture><span class="menu-mob__caption">What is Quezzle?</span>
                         </a></li>
                     <li class="menu-mob__item"><a class="menu-mob__link js-popup-close" href="#team">
                             <picture>
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-2.webp' | asset_url }} 1x, {{'menu-mob/icon-2@2x.webp' | asset_url }} 2x" type="image/webp" />
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-2.png' | asset_url }} 1x, {{'menu-mob/icon-2@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob/icon-2.png' | asset_url }} 1x, {{'menu-mob/icon-2@2x.png' | asset_url }} 2x" width="42" height="30" alt="" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-2.webp' | asset_url }} 1x, {{'menu-mob-icon-2@2x.webp' | asset_url }} 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-2.png' | asset_url }} 1x, {{'menu-mob-icon-2@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob-icon-2.png' | asset_url }} 1x, {{'menu-mob-icon-2@2x.png' | asset_url }} 2x" width="42" height="30" alt="" />
                             </picture><span class="menu-mob__caption">Unidragon &amp; IC4Design</span>
                         </a></li>
                     <li class="menu-mob__item"><a class="menu-mob__link js-popup-close" href="#answers">
                             <picture>
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-3.webp' | asset_url }} 1x, {{'menu-mob/icon-3@2x.webp' | asset_url }} 2x" type="image/webp" />
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-3.png' | asset_url }} 1x, {{'menu-mob/icon-3@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob/icon-3.png' | asset_url }} 1x, {{'menu-mob/icon-3@2x.png' | asset_url }} 2x" width="53" height="20" alt="" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-3.webp' | asset_url }} 1x, {{'menu-mob-icon-3@2x.webp' | asset_url }} 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob-icon-3.png' | asset_url }} 1x, {{'menu-mob-icon-3@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob-icon-3.png' | asset_url }} 1x, {{'menu-mob-icon-3@2x.png' | asset_url }} 2x" width="53" height="20" alt="" />
                             </picture><span class="menu-mob__caption">FAQ</span>
                         </a></li>
                 </ul>
