--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -38,6 +38,9 @@
 <style>
     a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {display: inherit!important;}
     .go-cart-drawer-progress-bar {display: none;}
+    a.go-cart__button.cart {border-radius: 0;}
+    a.go-cart__button:hover {color:white;}
+    a.go-cart__button {text-decoration: none;}
 </style>
 <div class="page__wrapper">
     <header class="header page__header">
