--- a/sections/product-template-balancing.liquid
+++ b/sections/product-template-balancing.liquid
@@ -1377,6 +1377,21 @@
         },
         {
           "type":"header",
+          "content":"Discount Image Banner"
+        },
+        {
+          "type": "checkbox",
+          "id": "pdp_enable_banner",
+          "label": "Enable image banner",
+          "default": false
+        },
+        {
+          "type":"image_picker",
+          "id":"pdp_image_banner",
+          "label":"Banner Image"
+        },
+        {
+          "type":"header",
           "content":"Discount Info"
         },
         {
