Added new image pdp banner

--- a/snippets/pdp__discount.liquid
+++ b/snippets/pdp__discount.liquid
@@ -1,4 +1,4 @@
-{%- if pdp_enable_banner -%}
+{%- if section.settings.pdp_enable_banner -%}
   <div class="new-banner-10">
     <style>
           .new-banner-10 {
