Added new image pdp banner CART page

--- a/snippets/pdp__discount.liquid
+++ b/snippets/pdp__discount.liquid
@@ -9,6 +9,10 @@
             margin-bottom: 30px;
             padding-bottom: 0;
           }
+          .grid__item .medium-up--one-half .new-banner-10 {
+            margin-top: 0px;
+            margin-bottom: 0px;
+          }
     </style>
     {%- if section.settings.pdp_image_banner != blank -%}
       <img src="{{ section.settings.pdp_image_banner | img_url:'master'}}">
