Added new image pdp banner CART page

--- a/snippets/pdp__discount.liquid
+++ b/snippets/pdp__discount.liquid
@@ -5,13 +5,11 @@
             align-items: center;
             width: 100%;
             border: 1px solid #e6e6e6;
+            {%- if template != 'cart' -%}
             margin-top: 30px;
             margin-bottom: 30px;
+            {%- endif -%}
             padding-bottom: 0;
-          }
-          .grid__item .medium-up--one-half .new-banner-10 {
-            margin-top: 0px;
-            margin-bottom: 0px;
           }
     </style>
     {%- if section.settings.pdp_image_banner != blank -%}
